# constellation

./: .editorconfig  .eslintrc.json  .gitignore  CLAUDE.md  LICENSE  PYTHONPLAN.md  README.md  architecture-demo.mjs  codebuff.json  deploy-tool.sh  eslint.config.js  knowledge.md  package-lock.json  package.json  publish.sh  tsconfig.json
.agents/: README.md  project-ops.ts  react-typescript-agent.ts  security-coordinator.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: publish-remote-backend.yml
constellation-python/: README.md  mypy.ini  pyproject.toml
constellation-python/constellation/: __init__.py  constants.py  filesystem.py  safety.py  security.py  types.py
constellation-python/constellation/adapters/: __init__.py  base_adapter.py  claude_adapter.py  subprocess_patch.py
constellation-python/constellation/backends/: __init__.py  base.py  factory.py  local.py
constellation-python/constellation/config/: __init__.py  config.py  workspace_manager.py
constellation-python/constellation/utils/: __init__.py  logger.py  path_validator.py  posix_commands.py  workspace.py
constellation-python/examples/: basic_usage.py
constellation-python/examples/config/: basic_config.constellationfs.json  development_config.constellationfs.json  production_config.constellationfs.json
constellation-python/examples/web-demo/: .env.example  README.md  requirements.txt
constellation-python/examples/web-demo/app/: __init__.py  main.py
constellation-python/examples/web-demo/app/models/: chat.py
constellation-python/examples/web-demo/app/routes/: api.py  pages.py
constellation-python/examples/web-demo/app/services/: ai_service.py  fs_service.py
constellation-python/examples/web-demo/static/css/: style.css
constellation-python/examples/web-demo/static/js/: chat.js  filesystem.js
constellation-python/examples/web-demo/templates/: index.html
constellation-python/tests/: test_basic.py  test_basic_functionality.py  test_phase2_security.py  test_phase2_utils.py  test_phase4_workspace_management.py
constellation-typescript/: .env.local.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DOCKER-SETUP.md  MIGRATION.md  README.md  SECURITY.md  cleanup-docker.sh  eslint.config.js  package-lock.json  package.json  setup-docker.sh  tsconfig.json  vite.config.ts  vitest.config.ts
constellation-typescript/cli/: build-native.js  docker-run.js  index.js  jsconfig.json  mcp-server.js  native-path.js  path.js  remote.js
constellation-typescript/docker/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  (+2 more)
data/: lexicon.json  sources.json
examples/: README.md
src/: FileSystem.ts  constants.ts  index.ts  safety.ts  types.ts
tests/: FileSystem.test.ts  security.integration.test.ts  security.test.ts
(+185 files in other folders)
